<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClothFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">
            <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/cloth_fragment"
            android:layout_weight="30"/>
            <TextView
                android:id="@+id/cloth_display_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="70"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/cloth_display_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:contentDescription="@string/image_content_description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cloth_kind_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"/>
            <Button
                android:id="@+id/button_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:text="@string/button_back"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>